force-app/main/default/objects/PF_Project__c/PF_Project__c.object-meta.xml
<CustomObject>
    <description>This is where projects will be identified within the ProjectForce application.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>