force-app/main/default/objects/PF_Project__c/fields/Copado_Project__c.field-meta.xml
<CustomField>
    <fullName>Copado_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copado Project</label>
    <referenceTo>copado__Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>