force-app/main/default/objects/PF_Project__c/fields/PF_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Actual_End_Date__c</fullName>
    <description>Identifies the actual end date of the project.</description>
    <inlineHelpText>Select the date when the project actually ended.</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>