force-app/main/default/objects/PF_Project__c/fields/PF_Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Actual_Start_Date__c</fullName>
    <description>Identifies the actual start date of the project.</description>
    <inlineHelpText>Select the date when the project actually started.</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>