force-app/main/default/objects/PF_Project__c/fields/PF_Background_History__c.field-meta.xml
<CustomField>
    <fullName>PF_Background_History__c</fullName>
    <description>Identifies the project background.</description>
    <inlineHelpText>Provide a background to the project.</inlineHelpText>
    <label>Background (History)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>