force-app/main/default/objects/PF_Project__c/fields/PF_Long_Term_Goal_Benefits__c.field-meta.xml
<CustomField>
    <fullName>PF_Long_Term_Goal_Benefits__c</fullName>
    <inlineHelpText>Provide a summary of the long term goal and benefits.</inlineHelpText>
    <label>Long Term Goal (Benefits)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>