force-app/main/default/objects/PF_Project__c/fields/PF_Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Planned_End_Date__c</fullName>
    <inlineHelpText>Select the planned end date for the project.</inlineHelpText>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>