force-app/main/default/objects/PF_Project__c/fields/PF_Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Planned_Start_Date__c</fullName>
    <inlineHelpText>Select the planned start date for the project.</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>