force-app/main/default/objects/PF_Project__c/fields/PF_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Project_Description__c</fullName>
    <inlineHelpText>Provide a summary level description for the project.</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>