force-app/main/default/objects/PF_Project__c/fields/PF_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>PF_Project_Status__c</fullName>
    <inlineHelpText>Select the status for the project.</inlineHelpText>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>