force-app/main/default/objects/PF_Project__c/recordTypes/PF_Project.recordType-meta.xml
<RecordType>
    <fullName>PF_Project</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Project</label>
</RecordType>