force-app/main/default/objects/PF_Project__c/validationRules/Start_End_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Date_Check</fullName>
    <active>true</active>
    <description>Start date cannot be greater than end date.</description>
    <errorConditionFormula>(PF_Actual_Start_Date__c   &gt;  PF_Actual_End_Date__c ) ||  (PF_Planned_Start_Date__c  &gt; PF_Planned_End_Date__c )</errorConditionFormula>
    <errorMessage>Start dates cannot be greater than end dates.</errorMessage>
</ValidationRule>