force-app/main/default/objects/PF_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PF_Project_Number__c</columns>
    <columns>PF_Project_Description__c</columns>
    <columns>PF_Planned_Start_Date__c</columns>
    <columns>PF_Actual_Start_Date__c</columns>
    <columns>PF_Planned_End_Date__c</columns>
    <columns>PF_Actual_End_Date__c</columns>
    <columns>PF_Project_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>